# paidy-application

./: README.md
client/: Cargo.toml
client/src/: main.rs
loadtest/: Cargo.toml
loadtest/src/: main.rs
server/: Cargo.toml
server/src/: main.rs  tests.rs  types.rs
