[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["macros"] }
http-body-util = "0.1.2"
rand = "0.8.5"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
tokio = { version = "1.38.0", features = ["full"] }
tower = "0.4.13"

[dev-dependencies]
mime = "0.3.17"
reqwest = { version = "0.12.5", features = ["json"] }
